cleaned code, correct snake movements

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>CodersLab</title>
+    <title>Snake</title>
 </head>
 <body>
+<div class="container">
     <div id="app"></div>
+</div>
 </body>
 </html>
